feat: Added editing s3 objects on edit contact, changed basic styling, fixed image type

--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,8 @@
     <title>Crombiterate</title>
 </head>
 
-<body class="min-h-screen min-w-screen dark">
-    <div id="root" class="h-full w-full">
+<body class="min-h-screen min-w-screen max-w-screen dark overflow-x-hidden">
+    <div id="root" class="min-h-screen h-auto w-full max-w-screen">
     </div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
